# keith

./: .clang-format  CMakeLists.txt  dependencies.cmake
src/: main.cpp
src/core/: Render.cpp  Render.h
src/game/: Game.cpp  Game.h  Scene.h
src/game/scenes/: OptionsScene.cpp  OptionsScene.h  PlayScene.cpp  PlayScene.h  TitleScene.cpp  TitleScene.h
